# Concord

./: README.md  pyproject.toml
configs/: base.yaml  finetune_cta.yaml  finetune_gene.yaml  pretrain.yaml
scripts/: run_finetune_cta.sh  run_finetune_gene.sh  run_pretrain.sh
src/: __init__.py
src/data/: __init__.py  collate.py  dataset.py  masking.py  vocab.py
src/losses/: __init__.py  contrastive.py  pretrain_losses.py
src/models/: __init__.py  attention.py  backbone.py  concord_model.py  heads.py  tokenizers.py
src/train/: __init__.py  checkpointing.py  config.py  distributed.py  finetune.py  pretrain.py  trainer.py
tests/: test_attention_backbone.py  test_checkpointing.py  test_pretrain_losses.py  test_synthetic_smoke.py  test_tokenizers.py
